# voiceLab

./: .gitignore  README.md  pyproject.toml
packaging/: voicenik.spec
scripts/: generate_sounds.py  validate.py
tests/: test_config.py  test_history.py  test_postprocess.py
voicenik/: __main__.py  app.py  audio.py  autostart.py  config.py  history.py  hotkey.py  injector.py  postprocess.py  transcriber.py
voicenik/ui/: overlay.py  settings_window.py  tray.py
