[project]
name = "voicenik"
version = "0.1.0"
description = "Assistant de dictée vocale 100 % local pour Windows (Whisper)"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4.6",
    "numpy",
    "keyboard>=0.13.5",
    "pystray>=0.19",
    "Pillow>=10",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
cuda = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9",
]
dev = [
    "pytest",
    "pyinstaller",
]

[project.scripts]
voicenik = "voicenik.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["voicenik*"]
